add override for help items
